# expense-tracker

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  turbo.json
apps/client/: astro.config.mjs  biome.json  package-lock.json  package.json
apps/client/src/pages/: 404.astro
apps/client/src/pages/about/: index.astro
apps/server/: Cargo.toml  package.json
apps/server/migrations/: 20250513212426_create_users_table.up.sql
apps/server/src/: config.rs  main.rs
apps/server/src/application/services/: user_service.rs
apps/server/src/domain/models/: user_model.rs
apps/server/src/infrastructure/: database.rs  mod.rs
apps/server/src/infrastructure/repositories/: user_repository.rs
apps/server/src/interfaces/: mod.rs
apps/server/src/interfaces/http/: mod.rs
apps/server/src/interfaces/http/dtos/: user_dto.rs
apps/server/src/interfaces/http/handlers/: user_handler.rs
apps/server/src/interfaces/repositories/: user_repository.rs
