[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json", "time"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
actix-files = "0.6.6"
